[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI_Components/Toolbar.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Crushed-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/png/minus.png" type="Texture" id=3]
[ext_resource path="res://Assets/png/fullscreen.png" type="Texture" id=4]
[ext_resource path="res://Assets/png/cross.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="Toolbar" type="HBoxContainer"]
pause_mode = 2
anchor_right = 1.0
margin_bottom = 50.0
mouse_filter = 0
custom_constants/separation = 2
alignment = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="VSeparator7" type="VSeparator" parent="."]
margin_right = 30.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="WindowTitle" type="Label" parent="."]
margin_left = 32.0
margin_right = 105.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 46, 20 )
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Planner"
align = 1
valign = 1

[node name="VSeparator5" type="VSeparator" parent="."]
margin_left = 107.0
margin_right = 147.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 40

[node name="Slash" type="Label" parent="."]
margin_left = 149.0
margin_top = 10.0
margin_right = 154.0
margin_bottom = 39.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "I"
align = 1
valign = 2

[node name="VSeparator6" type="VSeparator" parent="."]
margin_left = 156.0
margin_right = 196.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 40

[node name="DocTitle" type="Label" parent="."]
margin_left = 198.0
margin_right = 989.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 46, 20 )
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
max_lines_visible = 1

[node name="VSeparator4" type="VSeparator" parent="."]
margin_left = 991.0
margin_right = 1291.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 300

[node name="Minimize" type="ToolButton" parent="."]
margin_left = 1293.0
margin_right = 1335.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 15, 25 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 3 )
clip_text = true

[node name="VSeparator3" type="VSeparator" parent="."]
margin_left = 1337.0
margin_right = 1338.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 1

[node name="Fullscreen" type="ToolButton" parent="."]
margin_left = 1340.0
margin_right = 1382.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 15, 25 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 4 )
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 1384.0
margin_right = 1385.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 1

[node name="Close" type="ToolButton" parent="."]
margin_left = 1387.0
margin_right = 1429.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 15, 25 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 5 )
clip_text = true

[node name="SaveConfirm" type="WindowDialog" parent="Close"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -60.0
margin_right = 101.0
margin_bottom = 85.0
popup_exclusive = true

[node name="SaveYes" type="Button" parent="Close/SaveConfirm"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = -91.0
margin_right = 85.0
margin_bottom = -50.0
text = "Yes"

[node name="SaveNo" type="Button" parent="Close/SaveConfirm"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -91.0
margin_right = -20.0
margin_bottom = -50.0
text = "No"

[node name="SaveCancel" type="Button" parent="Close/SaveConfirm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = 25.5
margin_right = 35.0
margin_bottom = 66.5
text = "Cancel"

[node name="Label" type="Label" parent="Close/SaveConfirm"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 45.0
text = "Save ?"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 1431.0
margin_right = 1440.0
margin_bottom = 50.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 9
[connection signal="gui_input" from="." to="." method="_on_ToolBar_gui_input"]
[connection signal="pressed" from="Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Close/SaveConfirm/SaveYes" to="." method="_on_SaveYes_pressed"]
[connection signal="pressed" from="Close/SaveConfirm/SaveNo" to="." method="_on_SaveNo_pressed"]
[connection signal="pressed" from="Close/SaveConfirm/SaveCancel" to="." method="_on_SaveCancel_pressed"]
